# batmat

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  conanfile.py  cr-update.py  sched-par-4.py  sched-par-solve-rev.py  viz-sp.py
benchmarks/: CMakeLists.txt  benchmark-main.cpp  compress.cpp  custom-potrf-microkernel.cpp  custom-potrf.cpp  gemm.cpp  gemm.py  geqrf.cpp  hyh.cpp  potrf.cpp  shh.cpp  solve.cpp  syrk-potrf.cpp  syrk.cpp  trmm.cpp  trsm.cpp  trtri.cpp  visualize.py
benchmarks/blasfeo/: blasfeo-gemm.cpp  blasfeo-potrf.cpp  blasfeo-syrk.cpp  blasfeo-trsm.cpp
benchmarks/experiments/shh/: Makefile
benchmarks/include/: blasfeo.hpp
benchmarks/mkl/: CMakeLists.txt  conanfile.txt  potrf-mkl.cpp
benchmarks/ocp-solve/: CMakeLists.txt  README.md  ocp-solve.cpp  plot-ocp-solve.py  riccati-blasfeo-factor.cpp  riccati-blasfeo.hpp
benchmarks/scripts/: visualize-threads.py  visualize.py
docs/: CMakeLists.txt  Doxyfile.cmake
docs/source/doxygen/: examples.md  groups.dox  header.html  index-header.html  index.md
src/: CMakeLists.txt
src/batmat/include/batmat/: assume.hpp  config.hpp.in  dtypes.hpp  kib.hpp  loop.hpp  lut.hpp  openmp.h  simd.hpp  thread-pool.hpp  timing.hpp  unroll.h
src/batmat/include/batmat/linalg/: compress.hpp  copy.hpp  elementwise.hpp  flops.hpp  gemm-diag.hpp  gemm.hpp  gemv.hpp  geqrf.hpp  hyhound.hpp  norms.hpp  potrf.hpp  reduce.hpp  shift.hpp  simdify.hpp  structure.hpp  symm.hpp  symv.hpp  syomv.hpp  triangular.hpp  trsm.hpp  trtri.hpp  uview.hpp
src/batmat/include/batmat/matrix/: layout.hpp  matrix.hpp  storage.hpp  view.hpp
src/batmat/include/batmat/ops/: cneg.hpp  gather.hpp  mask.hpp  rotate.hpp  rsqrt.hpp  transpose.hpp
src/batmat/include/batmat/platform/: avx-512.hpp  avx2.hpp  generic.hpp  neon.hpp  platform.hpp
src/batmat/src/: thread-pool.cpp  timing.cpp
src/batmat/src/linalg/micro-kernels/: Codegen.cmake  decl.hpp.in  gemm-diag.cpp.in  gemm.cpp.in  gemv.cpp.in  hyhound.cpp.in  inst.cpp.in  potrf.cpp.in  symv.cpp.in  syomv.cpp.in  trsm.cpp.in  trtri.cpp.in
src/cholundate/include/koqkatoo/cholundate/: householder-downdate-common.tpp  householder-downdate-libfork.tpp  householder-downdate-static.tpp  householder-downdate.hpp  householder-downdate.tpp  householder-updowndate-common.tpp  householder-updowndate-libfork.tpp  householder-updowndate-naive.tpp  householder-updowndate-serial.tpp  householder-updowndate-static.tpp  householder-updowndate.hpp  householder-updowndate.tpp  updown.hpp
src/cholundate/src/: householder-downdate-libfork.cpp.in  householder-downdate-static.cpp.in  householder-downdate.cpp.in  householder-updowndate-libfork.cpp.in  householder-updowndate-naive.cpp.in  householder-updowndate-serial.cpp.in  householder-updowndate-static.cpp.in  householder-updowndate.cpp.in
src/cholundate/src/micro-kernels/: Codegen.cmake  householder-downdate-diag.cpp.in  householder-downdate-full.cpp.in  householder-downdate-tail.cpp.in  householder-updowndate-diag.cpp.in  householder-updowndate-full.cpp.in  householder-updowndate-tail.cpp.in
src/cmake/: BLAS.cmake  BuildTime.cmake  Config.cmake.in  CoreConfig.cmake.in  ExtraConfig.cmake.in  Install.cmake  Library.cmake  batmat-build-time.cpp.in  batmat-version.h.in  koqkatoo-build-time.cpp.in  koqkatoo-version.h.in
src/cyclocp/include/cyclocp/: compact.hpp  cyclocp-storage.hpp  cyclocp.hpp  ocp.hpp  random-ocp.hpp
src/cyclocp/include/cyclocp/compact/: elementwise.tpp  pack.tpp  update.tpp
src/cyclocp/include/cyclocp/implementation/: data.tpp  factor.tpp  indexing.tpp  mat-vec.tpp  pcg.tpp  solve.tpp  sparse.tpp  update.tpp
src/cyclocp/src/: cyclocp-storage.cpp  cyclocp.cpp
src/koqkatoo/include/koqkatoo/: assume.hpp  cneg.hpp  config.hpp.in  fork-pool.hpp  kib.hpp  koqkatoo.hpp  loop.hpp  lut.hpp  matrix-view.hpp  openmp.h  preprocessor.h  stringify.h  thread-pool.hpp  timing.hpp  trace.hpp  unroll.h
src/koqkatoo/src/: fork-pool.cpp  koqkatoo.cpp  thread-pool.cpp  timing.cpp  trace.cpp
src/linalg-compact/include/koqkatoo/linalg-compact/: aligned-storage.hpp  compact.hpp  compact.tpp  matrix-batch.hpp  mkl.hpp  preferred-backend.hpp
src/linalg-compact/src/: compact.cpp
src/linalg-compact/src/micro-kernels/: Codegen.cmake  xgemm-diag-mask.cpp.in  xgemm-diag.cpp.in  xgemm.cpp.in  xgemmt-diag-mask.cpp.in  xgemmt-diag.cpp.in  xgemmt.cpp.in  xpntrf.cpp.in  xpotrf.cpp.in  xshh.cpp.in  xshhud-diag.cpp.in  xshhud.cpp.in  xtrmm.cpp.in  xtrsm.cpp.in  xtrtri.cpp.in  xtrtrsyrk.cpp.in
src/linalg/include/koqkatoo/linalg/: blas-interface.hpp  blas.hpp  lapack.hpp  small-potrf.hpp
src/linalg/src/: blas-interface.cpp  small-potrf.cpp
src/ocp/include/koqkatoo/ocp/: conversion.hpp  cyclocp-storage.hpp  cyclocp.hpp  ocp.hpp  (+1 more)
src/ocp/src/: conversion.cpp  cyclic-solver.cpp  cyclocp-storage.cpp  cyclocp.cpp  solve.cpp
test/: CMakeLists.txt  eigen-matchers.hpp  icpx-repro.cpp  real-literal.hpp  simple-gemm-standalone-scalar.cpp  simple-gemm-standalone.cpp  simple-gemm.cpp  test-thread-pool.cpp
test/cholundate/: test-shh-downdate.cpp  test-shh-updowndate.cpp
test/cyclocp/: test-cyclocp.cpp
test/linalg/: config.hpp  fixtures.hpp  test-compress.cpp  test-copy.cpp  test-elementwise.cpp  test-gemm-diag.cpp  test-gemm-new.cpp  test-gemm.cpp  test-gemv.cpp  test-geqrf.cpp  test-hyh.cpp  test-potrf.cpp  test-reduce.cpp  test-symv.cpp  test-trsm.cpp  test-trtri.cpp  test-trtrsyrk.cpp
test/linalg-compact/: config.hpp  test-batched-matrix.cpp  test-compress.cpp  test-gemm.cpp  test-pntrf.cpp  test-potrf.cpp  test-rotate.cpp  test-shh.cpp  test-shhud-diag.cpp  test-syrk.cpp  test-trmv.cpp  test-trsm.cpp  test-trtri.cpp  test-update.cpp
test/matrix/: test-view.cpp
test/ocp/: cyclic-storage.ipp  cyclic-storage.py  eigen-matchers.hpp  reference-solution.cpp  reference-solution.hpp  solve-cyclic.cpp  test-cyclic-schedule.cpp  test-cyclic-util.cpp  test-cyclocp.cpp  test-reconstruct.cpp  test-solve-cyclic.cpp  test-solve-parallel.cpp  test-solve.cpp
test/ops/: test-rotate.cpp
(+5938 files in other folders)
