find_package(benchmark REQUIRED)

add_library(benchmark-main "benchmark-main.cpp")
target_link_libraries(benchmark-main PUBLIC batmat::batmat benchmark::benchmark)
add_executable(benchmark-gemm "gemm.cpp")
target_link_libraries(benchmark-gemm PRIVATE benchmark-main batmat::warnings)
add_executable(benchmark-trtri "trtri.cpp")
target_link_libraries(benchmark-trtri PRIVATE benchmark-main batmat::warnings)
add_executable(benchmark-potrf "potrf.cpp")
target_link_libraries(benchmark-potrf PRIVATE benchmark-main batmat::warnings)
